# akash-video-tutorial

./: Dockerfile  deploy.yaml  pyproject.toml
