[tool.poetry]
name = "hf-to-akash"
version = "0.1.0"
description = ""
authors = ["cro7 <cro7nis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "2.1.0"
transformers = "4.42.4"
accelerate = "*"
gradio = "*"
sentencepiece = "*"
xformers = "*"
invisible_watermark = "*"
protobuf = "*"
diffusers = "*"
spaces = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
